chore: use trovter.com urls and tweak to layout

--- a/src/index.njk
+++ b/src/index.njk
@@ -1,5 +1,5 @@
 <section>
-    <div class="container">
+    <div class="container text-center">
         <h1 class="py-10 text-6xl md:text-8xl tracking-tight font-display font-black text-center
             text-transparent bg-clip-text bg-gradient-to-tl from-pink-500 via-red-500 to-yellow-500">
             Statistics
