--- a/src/_layouts/default.njk
+++ b/src/_layouts/default.njk
@@ -29,7 +29,7 @@
             </div>
         </main>
 
-        <footer class="py-6 text-sm text-zinc-500">
+        <footer class="py-6 text-sm text-zinc-500 text-center">
             <div class="container vcard space-y-1">
                 <h3>© 2022 <em class="fn not-italic">{{ site.author }}</em></h3>
                 <p><a href="mailto:{{ site.email }}" class="email underline underline-offset-8 hover:no-underline focus:no-underline">{{ site.email }}</a></p>
