chore: disable js/aos animation and fix mobile styles

--- a/src/_layouts/default.njk
+++ b/src/_layouts/default.njk
@@ -32,12 +32,11 @@
         <footer class="py-6 text-sm text-zinc-500 text-center">
             <div class="container vcard space-y-1">
                 <h3>© 2022 <em class="fn not-italic">{{ site.author }}</em></h3>
-                <p><a href="mailto:{{ site.email }}" class="email underline underline-offset-8 hover:no-underline focus:no-underline">{{ site.email }}</a></p>
             </div>
         </footer>
 
-        <script src="{{ "/js/manifest.js" | url | absoluteUrl(config.baseUrl) }}"></script>
+        {# <script src="{{ "/js/manifest.js" | url | absoluteUrl(config.baseUrl) }}"></script>
         <script src="{{ "/js/vendor.js" | url | absoluteUrl(config.baseUrl) }}"></script>
-        <script src="{{ "/js/site.js" | url | absoluteUrl(config.baseUrl) }}"></script>
+        <script src="{{ "/js/site.js" | url | absoluteUrl(config.baseUrl) }}"></script> #}
     </body>
 </html>
