chore: more text for music

--- a/src/2022.njk
+++ b/src/2022.njk
@@ -287,7 +287,8 @@
             text-transparent bg-clip-text bg-gradient-to-tl from-rose-400 via-fuchsia-500 to-indigo-500"
             data-aos="fade-down" data-aos-delay="150">
             I listened to <strong data-number>26,547</strong> tracks,
-            totalling <strong data-number>79,641</strong> minutes.
+            totalling <strong data-number>1327</strong> hours or
+            <strong data-number>79,641</strong> minutes.
         </h2>
 
         <div class="grid lg:grid-cols-2 gap-8">
