--- a/src/2022.njk
+++ b/src/2022.njk
@@ -185,35 +185,35 @@
             <ul class="grid grid-cols-2 gap-4 md:grid-cols-4 md:gap-6">
                 <li class="bg-gradient-to-tl from-rose-400 via-fuchsia-500 to-indigo-500"
                     data-aos="zoom-in-right" data-aos-delay="450">
-                    <img class="block w-full grayscale mix-blend-multiply hover:grayscale-0 hover:mix-blend-normal" src="https://www.trovster.com/images/movies/poster/[3190]_top-gun-maverick.jpg" />
+                    <img class="block w-full grayscale mix-blend-multiply hover:grayscale-0 hover:mix-blend-normal" height="400" width="270" src="https://www.trovster.com/images/movies/poster/[3190]_top-gun-maverick.jpg" alt="Top Gun: Maverick movie poster" />
                 </li>
                 <li class="bg-gradient-to-tl from-rose-400 via-fuchsia-500 to-indigo-500"
                     data-aos="zoom-in-down" data-aos-delay="450">
-                    <img class="block w-full grayscale mix-blend-multiply hover:grayscale-0 hover:mix-blend-normal" src="https://www.trovster.com/images/movies/poster/[3201]_hustle.jpg" />
+                    <img class="block w-full grayscale mix-blend-multiply hover:grayscale-0 hover:mix-blend-normal" height="400" width="270" src="https://www.trovster.com/images/movies/poster/[3201]_hustle.jpg" alt="Hustle movie poster" />
                 </li>
                 <li class="bg-gradient-to-tl from-rose-400 via-fuchsia-500 to-indigo-500"
                     data-aos="zoom-in-down" data-aos-delay="450">
-                    <img class="block w-full grayscale mix-blend-multiply hover:grayscale-0 hover:mix-blend-normal" src="https://www.trovster.com/images/movies/poster/[3188]_24-hour-party-people.jpg" />
+                    <img class="block w-full grayscale mix-blend-multiply hover:grayscale-0 hover:mix-blend-normal" height="400" width="270" src="https://www.trovster.com/images/movies/poster/[3188]_24-hour-party-people.jpg" alt="24 Hour Party People movie poster" />
                 </li>
                 <li class="bg-gradient-to-tl from-rose-400 via-fuchsia-500 to-indigo-500"
                     data-aos="zoom-in-left" data-aos-delay="450">
-                    <img class="block w-full grayscale mix-blend-multiply hover:grayscale-0 hover:mix-blend-normal" src="https://www.trovster.com/images/movies/poster/[3201]_hustle.jpg" />
+                    <img class="block w-full grayscale mix-blend-multiply hover:grayscale-0 hover:mix-blend-normal" height="400" width="270" src="https://www.trovster.com/images/movies/poster/[3201]_hustle.jpg" alt="Hustle movie poster" />
                 </li>
                 <li class="bg-gradient-to-tl from-rose-400 via-fuchsia-500 to-indigo-500"
                     data-aos="zoom-in-right" data-aos-delay="450">
-                    <img class="block w-full" src="https://www.trovster.com/images/movies/poster/[3188]_24-hour-party-people.jpg" />
+                    <img class="block w-full" height="400" width="270" src="https://www.trovster.com/images/movies/poster/[3188]_24-hour-party-people.jpg" alt="24 Hour Party People movie poster" />
                 </li>
                 <li class="bg-gradient-to-tl from-rose-400 via-fuchsia-500 to-indigo-500"
                     data-aos="zoom-in-up" data-aos-delay="450">
-                    <img class="block w-full" src="https://www.trovster.com/images/movies/poster/[3201]_hustle.jpg" />
+                    <img class="block w-full" height="400" width="270" src="https://www.trovster.com/images/movies/poster/[3201]_hustle.jpg" alt="Hustle movie poster" />
                 </li>
                 <li class="bg-gradient-to-tl from-rose-400 via-fuchsia-500 to-indigo-500"
                     data-aos="zoom-in-up" data-aos-delay="450">
-                    <img class="block w-full" src="https://www.trovster.com/images/movies/poster/[3190]_top-gun-maverick.jpg" />
+                    <img class="block w-full" height="400" width="270" src="https://www.trovster.com/images/movies/poster/[3190]_top-gun-maverick.jpg" alt="Top Gun: Maverick movie poster" />
                 </li>
                 <li class="bg-gradient-to-tl from-rose-400 via-fuchsia-500 to-indigo-500"
                     data-aos="zoom-in-left" data-aos-delay="450">
-                    <img class="block w-full" src="https://www.trovster.com/images/movies/poster/[3201]_hustle.jpg" />
+                    <img class="block w-full" height="400" width="270" src="https://www.trovster.com/images/movies/poster/[3201]_hustle.jpg" alt="Hustle movie poster" />
                 </li>
             </ul>
         </div>
@@ -228,7 +228,7 @@
                     of Dante’s Inferno 9 Circles of Hell allegory and creepy characters it has genuinely frightening moments. Running
                     at a brisk 90 minutes, it uses every inch of its runtime to fantastic effect.
                 </p>
-                <p class="text-zinc-500">As Above, So Below</p>
+                <p class="text-zinc-400">As Above, So Below</p>
             </blockquote>
 
             <blockquote class="max-w-xl mx-auto leading-tight text-base sm:text-xl"
@@ -240,7 +240,7 @@
                     of Dante’s Inferno 9 Circles of Hell allegory and creepy characters it has genuinely frightening moments. Running
                     at a brisk 90 minutes, it uses every inch of its runtime to fantastic effect.
                 </p>
-                <p class="text-zinc-500">As Above, So Below</p>
+                <p class="text-zinc-400">As Above, So Below</p>
             </blockquote>
         </div>
     </div>
@@ -375,35 +375,35 @@
             <ul class="flex flex-wrap justify-center gap-5 overflow-hidden py-4 sm:gap-8">
                 <li class="aspect-square flex-none w-64 lg:w-96 overflow-hidden rounded-xl sm:rounded-2xl md:rotate-2 transition-transform duration-200 hover:rotate-0"
                     data-aos="zoom-in" data-aos-delay="150">
-                    <img src="https://www.trovster.com/images/photos/thumbnails/307812222_806830787403671_679083603303123733_n.jpg" />
+                    <img src="https://www.trovster.com/images/photos/thumbnails/307812222_806830787403671_679083603303123733_n.jpg" alt="x" />
                 </li>
                 <li class="aspect-square flex-none w-64 lg:w-96 overflow-hidden rounded-xl sm:rounded-2xl md:-rotate-2 transition-transform duration-200 hover:rotate-0"
                     data-aos="zoom-in" data-aos-delay="250">
-                    <img src="https://www.trovster.com/images/photos/activities/thumbnails/9TcZuIObfFBon6ZB7ef8Onk6pCiX3oz5J1YcccEMGo8-1536x2048.jpg" />
+                    <img src="https://www.trovster.com/images/photos/activities/thumbnails/9TcZuIObfFBon6ZB7ef8Onk6pCiX3oz5J1YcccEMGo8-1536x2048.jpg" alt="x" />
                 </li>
                 <li class="aspect-square flex-none w-64 lg:w-96 overflow-hidden rounded-xl sm:rounded-2xl md:rotate-2 transition-transform duration-200 hover:rotate-0"
                     data-aos="zoom-in" data-aos-delay="350">
-                    <img src="https://www.trovster.com/images/photos/activities/thumbnails/ACvxJbdEzpVtaVhmXjHkp0YW5HSZ9fXEbYvum-q0ynk-1536x2048.jpg" />
+                    <img src="https://www.trovster.com/images/photos/activities/thumbnails/ACvxJbdEzpVtaVhmXjHkp0YW5HSZ9fXEbYvum-q0ynk-1536x2048.jpg" alt="x" />
                 </li>
                 <li class="aspect-square flex-none w-64 lg:w-96 overflow-hidden rounded-xl sm:rounded-2xl md:-rotate-2 transition-transform duration-200 hover:rotate-0"
                     data-aos="zoom-in" data-aos-delay="450">
-                    <img src="https://www.trovster.com/images/photos/thumbnails/278064547_126217749776160_8597280476272529311_n.jpg" />
+                    <img src="https://www.trovster.com/images/photos/thumbnails/278064547_126217749776160_8597280476272529311_n.jpg" alt="x" />
                 </li>
                 <li class="aspect-square flex-none w-64 lg:w-96 overflow-hidden rounded-xl sm:rounded-2xl md:rotate-2 transition-transform duration-200 hover:rotate-0"
                     data-aos="zoom-in" data-aos-delay="550">
-                    <img src="https://www.trovster.com/images/photos/thumbnails/307812222_806830787403671_679083603303123733_n.jpg" />
+                    <img src="https://www.trovster.com/images/photos/thumbnails/307812222_806830787403671_679083603303123733_n.jpg" alt="x" />
                 </li>
                 <li class="aspect-square flex-none w-64 lg:w-96 overflow-hidden rounded-xl sm:rounded-2xl md:-rotate-2 transition-transform duration-200 hover:rotate-0"
                     data-aos="zoom-in" data-aos-delay="650">
-                    <img src="https://www.trovster.com/images/photos/activities/thumbnails/9TcZuIObfFBon6ZB7ef8Onk6pCiX3oz5J1YcccEMGo8-1536x2048.jpg" />
+                    <img src="https://www.trovster.com/images/photos/activities/thumbnails/9TcZuIObfFBon6ZB7ef8Onk6pCiX3oz5J1YcccEMGo8-1536x2048.jpg" alt="x" />
                 </li>
                 <li class="aspect-square flex-none w-64 lg:w-96 overflow-hidden rounded-xl sm:rounded-2xl md:rotate-2 transition-transform duration-200 hover:rotate-0"
                     data-aos="zoom-in" data-aos-delay="750">
-                    <img src="https://www.trovster.com/images/photos/activities/thumbnails/ACvxJbdEzpVtaVhmXjHkp0YW5HSZ9fXEbYvum-q0ynk-1536x2048.jpg" />
+                    <img src="https://www.trovster.com/images/photos/activities/thumbnails/ACvxJbdEzpVtaVhmXjHkp0YW5HSZ9fXEbYvum-q0ynk-1536x2048.jpg" alt="x" />
                 </li>
                 <li class="aspect-square flex-none w-64 lg:w-96 overflow-hidden rounded-xl sm:rounded-2xl md:-rotate-2 transition-transform duration-200 hover:rotate-0"
                     data-aos="zoom-in" data-aos-delay="850">
-                    <img src="https://www.trovster.com/images/photos/thumbnails/278064547_126217749776160_8597280476272529311_n.jpg" />
+                    <img src="https://www.trovster.com/images/photos/thumbnails/278064547_126217749776160_8597280476272529311_n.jpg" alt="x" />
                 </li>
             </ul>
         </div>
