--- a/src/_templates/movies/top.njk
+++ b/src/_templates/movies/top.njk
@@ -1,13 +1,6 @@
 <ol class="max-w-2xl mx-auto pl-4 list-decimal list-outside leading-tight space-y-2 text-lg sm:text-2xl md:text-4xl"
     data-aos="fade-right" data-aos-delay="450">
-    <li>Everything Everywhere All At Once</li>
-    <li>Nope</li>
-    <li>Incendies</li>
-    <li>The Worst Person in the World</li>
-    <li>The Unbearable Weight of Massive Talent</li>
-    <li>Top Gun: Maverick</li>
-    <li>Untouchable</li>
-    <li>The Rescue</li>
-    <li>Boiling Point</li>
-    <li>Paprika</li>
+    {% for movie in movies.top %}
+    <li><a href="{{ movie.links.permalink }}">{{ movie.title }}</a></li>
+    {% endfor %}
 </ol>
